--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
+    "classnames": "2.5.1",
     "mobx": "6.12.0",
     "mobx-react-lite": "4.0.5",
     "react": "^18.2.0",
